# Uni3D-DataSkill

./: .gitignore  AGENTS.md  PLAN.md  README.ch-ZN.md  README.md  dataset_config.example.json  dataset_skill_design.md  pyproject.toml  面向多源三维数据集自动适配的 SKILL.md 设计研究.md
registry/: blendedmvs.yaml  kitti360.yaml
src/unidata_skill/: __init__.py  cli.py  config.py  pi3x.py  reports.py
src/unidata_skill/correspondences/: __init__.py  builder.py  corres.py  cropping.py  dataset_views.py  features.py  geometry.py  sampling.py  writer.py
src/unidata_skill/datasets/: __init__.py  aria_synthetic_environments_dataset.py  arkit_scenes_dataset.py  blendedmvg_dataset.py  hypersim_dataset.py  kitti360_dataset.py  kitti_odometry_dataset.py  kitti_raw_dataset.py  nuscenes_dataset.py  pi3x_validator.py  sage_dataset.py  uco3d_dataset.py  waymo_kitti_dataset.py  wayve_dataset.py
src/unidata_skill/datasets/kitti360/: dataset.py  (+1 more)
src/unidata_skill/inspect/: __init__.py  blendedmvs.py
src/unidata_skill/pi3x/: __init__.py  validator.py
src/unidata_skill/schema/: __init__.py  target.py
tests/: pi3_test_utils.py  sage.py  test_blendedmvs_inspector.py  test_config.py  test_direct_geometry_datasets.py  test_kitti360_dataset.py  test_pi3x_runtime.py  test_pi3x_validator.py
tools/: build_correspondence_dataset.py  build_mast3r_correspondences.py  compare_kitti_raw_pykitti.py  compare_kitti_raw_pykitti.sh  install_lightglue.sh  kitti_npy_feature_match_demo.py  kitti_npy_match_cropping_demo.py  kitti_npy_match_demo.py  kitti_npy_match_iter_demo.py  nuscenes_accumulate_lidar_depth_demo.py
(+5 files in other folders)
