[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "unidata-skill"
version = "0.1.0"
description = "Minimal executable workflow for multi-source 3D dataset adaptation."
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pillow",
]

[tool.setuptools.packages.find]
where = ["src"]
